# Axonlang

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: hpc.cu  hpc.dsl  hpc.ll  hpc.mlir  physics.dsl
grammar/: dsl.pest
src/: ast.rs  autodiff.rs  codegen.rs  errors.rs  gradcheck.rs  interp.rs  ir.rs  lib.rs  llm_bridge.rs  main.rs  opt.rs  parser.rs  runner.rs  tape.rs  typeck.rs
tests/: integration.rs  proptest_suite.rs
