[package]
name = "scientific-dsl"
version = "0.1.0"
edition = "2021"
description = "Scientific DSL: PEG parser → SSA IR → LLM-guided codegen → HPC/GPU kernels"

[[bin]]
name = "sdsl"
path = "src/main.rs"

[lib]
name = "scientific_dsl"
path = "src/lib.rs"

[dependencies]
pest        = "=2.7.11"
pest_derive = "=2.7.11"
serde       = { version = "=1.0.197", features = ["derive"] }
serde_json  = "=1.0.114"
anyhow      = "=1.0.80"
thiserror   = "=1.0.57"
clap        = { version = "=4.4.18", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "=1.4.0"
